# vox_terminal

./: .env.raspi.example  .gitignore  CHANGELOG.md  CLAUDE.md  PATCH_NOTES.md  README.md  electron-builder.json5  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
electron/: main.ts  preload.ts
resources/: convert_icon.py
scripts/: package-release.mjs  publish-release.mjs  version.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AuthStatus.tsx  ConfirmationModal.tsx  DeviceAuthModal.tsx  ErrorBoundary.tsx  Layout.tsx  Sidebar.tsx  TokenModal.tsx  ViewShell.tsx
src/config/: version.ts
src/context/: AuthContext.tsx  ChatContext.tsx  SettingsContext.tsx  ThemeContext.tsx  UpdateContext.tsx
src/hooks/: useTwitchAuth.ts
src/services/: ExternalEmoteService.ts  FilterService.ts  TTSEngine.ts  TwitchAuthService.ts  TwitchChatService.ts  UpdateService.ts
src/views/: AboutView.tsx  FiltersView.tsx  LogsView.tsx  SettingsView.tsx  TTSView.tsx
