[package]
name = "vox-terminal"
version = "1.0.0"
description = "VOX_TERMINAL — Twitch TTS desktop application"
authors = ["DreadedZombie"]
edition = "2021"

[lib]
name = "vox_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
cpal = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Media_SpeechSynthesis",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
    "Win32_System_Com",
] }
